[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "oss-helper-cli"
version = "0.1.0"
description = "A tiny CLI for drafting common open source workflow text."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Sandy Woo"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Documentation",
]
dependencies = [
  "click>=8.1,<9",
]

[project.urls]
Homepage = "https://github.com/iamsandywoo/oss-helper-cli"
Repository = "https://github.com/iamsandywoo/oss-helper-cli"
Issues = "https://github.com/iamsandywoo/oss-helper-cli/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[project.scripts]
oss-helper = "oss_helper_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
